# meri

./: .env  README.md  alembic.ini  data.json  docker-compose.yaml  pyproject.toml
.github/workflows/: on__commit_on_main_branch.yaml  on__commit_on_pr.yaml  on__pr_edit.yaml
alembic/: env.py
alembic/versions/: 2025_01_26_1422-f160bf5fa952_add_statements.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2c2a6890c956fc57_app_py.html  z_346e2d12d1f6b33b_command_context_py.html  z_346e2d12d1f6b33b_domain_py.html  z_567c5e92b89bae4e_fastapi_app_py.html  z_567c5e92b89bae4e_llm_routes_py.html  z_5d273427513f07e2_fastapi_app_py.html  z_69678ae4f14fcd6e_query_command_py.html  z_69678ae4f14fcd6e_query_llm_command_py.html  z_9dfa5d71e4f28d11_statement_repository_py.html  z_a35a14b84a3fcebb_openai_config_py.html  z_a35a14b84a3fcebb_postgresql_config_py.html  z_a35a14b84a3fcebb_vector_config_py.html  z_b0718959d617b22c_statement_exceptions_py.html  z_cef14778ce9ab346_embedding_service_py.html  z_cef14778ce9ab346_llm_service_py.html  z_cef14778ce9ab346_transcription_service_py.html  z_edcac80c4a6c49fd_prompt_category_enum_py.html  z_edcac80c4a6c49fd_statement_entity_py.html  z_ee0236647c811886_llm_routes_py.html
meri/: app.py  app.pyi
meri/alembic/: env.py
meri/config/: openai_config.py  openai_config.pyi  postgres_config.py  postgresql_config.py  postgresql_config.pyi  vector_config.py  vector_config.pyi
meri/domain/: command_context.py  command_context.pyi  domain.py  domain.pyi
meri/domain/commands/: ask_llm_command.py  query_command.py  query_command.pyi  query_llm_command.py  query_llm_command.pyi
meri/domain/entities/: prompt_category_enum.py  prompt_category_enum.pyi  statement.py  statement_entity.py  statement_entity.pyi
meri/domain/exceptions/: statement.py  statement_exceptions.pyi
meri/fastapi/: fastapi_app.py  fastapi_app.pyi
meri/fastapi/routes/: llm_routes.py
meri/repositories/: statement_repository.py  statement_repository.pyi
meri/routes/: fastapi_app.py  fastapi_app.pyi  llm_routes.py  llm_routes.pyi
meri/services/: embedding_service.py  embedding_service.pyi  llm.py  llm_service.py  llm_service.pyi  transcription_service.py  transcription_service.pyi
tests/: happy_test.py
tests/unit/config/: test_openai_config.py  test_postgresql_config.py  test_vector_config.py
tests/unit/fastapi/: test_fastapi_app.py
tests/unit/repositories/: test_statement_repository.py
tests/unit/routes/: test_fastapi_app.py  test_llm_routes.py
(+5 files in other folders)
