[project]
name = "meri"
description = "Your loyal companion, helping you stay organized and remember what truly matters."
version = "1.2.1"
authors = [{ name = "Mathieu Gueribout", email = "gueribout.mathieu@protonmail.com" }]
maintainers = [{ name = "Mathieu Gueribout", email = "gueribout.mathieu@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.12"
keywords = ["python", "utils", "tools"]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "alembic==1.14.*",
    "coverage==7.6.*",
    "docker==7.1.*",
    "fastapi==0.115.*",
    "httpx==0.28.*",
    "openai==1.60.*",
    "pgvector",
    "pre-commit==4.0.*",
    "psycopg2-binary==2.9.*",
    "pyjwt==2.10.*",
    "pyright==1.1.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
    "pytest-mock==3.14.*",
    "python-dotenv==1.0.*",
    "python-json-logger==3.2.*",
    "python_utils@git+https://github.com/gueriboutmathieu/python_utils@1.0.16",
    "requests==2.32.*",
    "ruff==0.9.*",
    "sqlalchemy==2.0.*",
    "types-sqlalchemy-utils==1.1.*",
    "uuid6==2024.7.*",
    "uvicorn==0.34.*",
    "python-multipart==0.0.20",
]

[project.urls]
repository = "https://github.com/gueriboutmathieu/meri"

[tool.uv]
package = true  # Install current package when running `uv sync`

[build-system]
requires = ["setuptools==75.8.*", "wheel==0.45.*", "setuptools-scm[toml]==8.1.*"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
meri = ["*.pyi"]

[tool.setuptools]
packages = [
    "meri",
    "meri.config",
    "meri.domain",
    "meri.domain.commands",
    "meri.domain.entities",
    "meri.domain.exceptions",
    "meri.routes",
    "meri.repositories",
    "meri.services",
]

[tool.coverage.run]
source = ["meri"]
relative_files = true

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
typeCheckingMode = "strict"
include = ["meri", "tests"]
exclude = ["*.venv/**", ".github/*"]
